Fixed text in DOTSamurai_enemies.html. Added more content to graces.html.

--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -284,8 +284,7 @@
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Light Armor Sets</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
-            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos"
-                id="light">
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
                 <!-- ==========
                 Header 
                 ========== -->
@@ -901,7 +900,7 @@
             <!-- ========== ========== ==========
             Light Armor Special Boon Set
             ========== ========== ========== -->
-            <h3 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Light Armor Special Boon Set</h3>
+            <h3 class="py-4 text-3xl text-yellow-400 font-extrabold text-center">Light Armor Special Boon Set</h3>
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
                 <!-- ==========
                 Header 
@@ -932,6 +931,316 @@
 
                         6PC: <br>
                         - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Base Game Medium Armor Sets
+    ========== ========== ========== ========== ========== -->
+    <section id="medium" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Medium Armor Sets</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Set Name</th>
+                    <th>Description</th>
+                </tr>
+
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">A Deadly Conviction (DLC 3)</span><br><br>
+                        <span class="italic">Suzuka's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +150 <br><br>
+
+                        3PC: <br>
+                        Ki +60 <br><br>
+
+                        4PC: <br>
+                        Anima Bonus (Purification) +1.0 <br><br>
+
+                        5PC: <br>
+                        Melee Damage +8.0% / Yokai Ability Charge (Yokai Shift) +20.0% <br>
+                        <span class="font-bold text-red-600">Anima Charge +20.0%</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Brilliant Strategem</span><br><br>
+                        <span class="italic">Imakomei's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Blindness Status on Scorched Enemy <br><br>
+
+                        3PC: <br>
+                        Reduced Defense (Ranged Weapon) 50.0% <br><br>
+
+                        4PC: <br>
+                        Burn Accumulation (Enemy) +15.0% <br><br>
+
+                        5PC: <br>
+                        Melee Damage vs. Scorched Enemy +10.0% <br>
+                        <span class="font-bold text-red-600">Fire Damage +15.0%</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Exemplary Eye for Elegance</span><br><br>
+                        <span class="italic">Swallowtail Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Luck (Critical) +30 <br><br>
+
+                        3PC: <br>
+                        Damage Taken -3.0% <br><br>
+
+                        4PC: <br>
+                        Tea Utensil Drop Rate +5.0% <br><br>
+
+                        5PC: <br>
+                        Ki +70 <br><br>
+
+                        6PC: <br>
+                        Melee Damage +7.0% <br><br>
+
+                        7PC: <br>
+                        Luck (Critical) <br>
+                        <span class="font-bold text-red-600">Tea Utensil Drop Rate +50%</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">First of the Four Guardians (DLC 2)</span><br><br>
+                        <span class="italic">Brave Demon Hunter's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +150 <br><br>
+
+                        3PC: <br>
+                        Archer's Impact Damage +13.0% <br><br>
+
+                        4PC: <br>
+                        Damage Taken vs. Yokai -6.0% <br><br>
+
+                        5PC: <br>
+                        Ki Recovery Speed +15.0% <br><br>
+
+                        6PC: <br>
+                        Active Skill Ki Consumption -15.0% <br><br>
+
+                        7PC: <br>
+                        Attack Bonus (Strength) A <br>
+                        <span class="font-bold text-red-600">Mystic Dyad (Fists)</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Hero of Troubled Times</span><br><br>
+                        <span class="italic">Vice-Minister's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Rifle Speed Up <br><br>
+
+                        3PC: <br>
+                        Damage Taken -2.5% <br><br>
+
+                        4PC: <br>
+                        High Attack Damage / Auto-Life Recovery (Enemy in Confusion) <br>
+                        <span class="font-bold text-red-600">Rifle Damage +20.0%</span><br><br>
+
+                        5PC: <br>
+                        - <br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Hunter of Tigers</span><br><br>
+                        <span class="italic">Tiger of Higo Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        Piercing Rain Damage +15.0% <br><br>
+
+                        4PC: <br>
+                        Faster Ki Recovery (Critical) <br><br>
+
+                        5PC: <br>
+                        Thrust Damage +6.0% <br><br>
+
+                        6PC: <br>
+                        Damage Taken -3.5% <br><br>
+
+                        7PC: <br>
+                        Attack Bonus (Skill) B+ <br>
+                        <span class="font-bold text-red-600">Ultimate Strength</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Imperial Ward (DLC 2)</span><br><br>
+                        <span class="italic">Demon Slayer's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Increased Attack & Defense (Dual Swords) +15 <br><br>
+
+                        3PC: <br>
+                        Sacred Bird Flight Damage +13.0% <br><br>
+
+                        4PC: <br>
+                        Ki Recovery Speed +10.0% <br><br>
+
+                        5PC: <br>
+                        Purified Accumulation (Enemy) +15.0% <br><br>
+
+                        6PC: <br>
+                        Anima Bonus (Purified Enemy) A <br><br>
+
+                        7PC: <br>
+                        Counter-Yokai Tactics A <br>
+                        <span class="font-bold text-red-600">Melee Damage vs. Purified Enemy +20.0%</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Legendary Mikawa Warrior</span><br><br>
+                        <span class="italic">Diehard's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Melee Ki Consumption (Critical) -15.0% <br><br>
+
+                        3PC: <br>
+                        Melee Damage (Critical) +10.0% <br><br>
+
+                        4PC: <br>
+                        Damage Taken -3.0% <br><br>
+
+                        5PC: <br>
+                        Ki +70 <br><br>
+
+                        6PC: <br>
+                        Melee Damage (Critical) +15.0% <br>
+                        <span class="font-bold text-red-600">Damage Bonus (Health Lost) A</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">National Unity</span><br><br>
+                        <span class="italic">Conqueror's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Faster Sword of Meditation Activation <br><br>
+
+                        3PC: <br>
+                        Damage Bonus (Enemies Defeated) B <br><br>
+
+                        4PC: <br>
+                        Damage Taken -3.0% <br><br>
+
+                        5PC: <br>
+                        Melee Damage +5.0% / Gain Amrita (Strong Attack) 30 <br>
+                        <span class="font-bold text-red-600">Active Skill Damage +13.0%</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">One-Eyed Dragon's Ambition</span><br><br>
+                        <span class="italic">One-Eyed Dragon Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        Amrita Sensor <br><br>
+
+                        4PC: <br>
+                        Melee Damage +4.0% <br><br>
+
+                        5PC: <br>
+                        Ki +45 <br><br>
+
+                        6PC: <br>
+                        Damage Bonus (Consecutive Attacks) A <br>
+                        <span class="font-bold text-red-600">Melee Ki Consumption -20.0%</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">One for All, All for One</span><br><br>
+                        <span class="italic">Gallant Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        Night Rain Damage +20.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +4.0% <br><br>
+
+                        5PC: <br>
+                        Damage Taken -3.5% <br><br>
+
+                        6PC: <br>
+                        Strong Attack Ki Consumption -20.0% <br>
+                        <span class="font-bold text-red-600">Sheathed Active Skill Damage +15.0%</span><br><br>
 
                         7PC: <br>
                         -
