Added more content to graces.html.

--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -1246,6 +1246,265 @@
                         -
                     </td>
                 </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Onmyo Austerity</span><br><br>
+                        <span class="italic">Onmyo Warrior's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Onmyo Magic Power +25 <br><br>
+
+                        3PC: <br>
+                        Devastating Rush Damage +15.0% <br><br>
+
+                        4PC: <br>
+                        Reduced Attack (Onmyo Magic Hit) <br><br>
+
+                        5PC: <br>
+                        Damage Bonus (Onmyo Magic Power) A- <br>
+                        <span class="font-bold text-red-600">Empowered Onmyo Magic B-</span><br><br>
+
+                        6PC: <br>
+                        - <br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Saruyasha's Valor</span><br><br>
+                        <span class="italic">Kohoku Master's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Amrita Gauge Charge 10.0% <br><br>
+
+                        3PC: <br>
+                        Anima Charge +10.0% <br><br>
+
+                        4PC: <br>
+                        Damage Taken -3.0% <br><br>
+
+                        5PC: <br>
+                        Attack Bonus (Amrita Gauge) A <br><br>
+
+                        6PC: <br>
+                        Dodge Ki Consumption -20.0% <br>
+                        <span class="font-bold text-red-600">Damage Bonus (Anima) A</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Seven Misfortunes, Eight Hardships</span><br><br>
+                        <span class="italic">Moonprayer Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        Melee Damage +5.0% / Extend Ailments <br><br>
+
+                        4PC: <br>
+                        Damage Bonus (Ailing Enemy) A+ <br><br>
+
+                        5PC: <br>
+                        Damage Taken (Ailing) -18.0% <br><br>
+
+                        6PC: <br>
+                        Melee Damage (Critical) +25.0% <br>
+                        <span class="font-boled text-red-600">Damage Bonus (Health Lost) A</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Shadows of a Dream (DLC 3)</span><br><br>
+                        <span class="italic">Dreaming Demon Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +150 <br><br>
+
+                        3PC: <br>
+                        Anima Charge +10.0% <br><br>
+
+                        4PC: <br>
+                        Extend Yokai Shift +20.0% <br><br>
+
+                        5PC: <br>
+                        Melee Damage +8.0% <br><br>
+
+                        6PC: <br>
+                        Amrita Bonus (Inflict Corruption) B+ <br><br>
+
+                        7PC: <br>
+                        Yokai Ability Damage (Yokai Shift) +20.0% <br>
+                        <span class="font-bold text-red-600">Melee Damage (Ailing Enemy) +20.0%</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">The Crossed Sickles</span><br><br>
+                        <span class="italic">Kingo Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        Final Blow Damage +10.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +4.0% <br><br>
+
+                        5PC: <br>
+                        Backstab Damage +15.0% <br><br>
+
+                        6PC: <br>
+                        Melee Ki Damage +15.0% <br>
+                        <span class="font-bold text-red-600">Finishing Flair A</span>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">The Honor in Harmony</span><br><br>
+                        <span class="italic">Hyuga Director's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        Flowing Shadow Damage +15.0% <br><br>
+
+                        4PC: <br>
+                        Damage Taken -3.5% <br><br>
+
+                        5PC: <br>
+                        Increased Attack (Onmyo Magic Hit) <br><br>
+
+                        6PC: <br>
+                        Active Skill Ki Damage +15.0% <br>
+                        <span class="font-bold text-red-600">Empowered Onmyo Magic B+</span>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">The Red of Devotion</span><br><br>
+                        <span class="italic">Sanada's Crimson Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        Never Winded 50.0% <br><br>
+
+                        4PC: <br>
+                        Melee Damage +4.0% / Block +20 <br><br>
+
+                        5PC: <br>
+                        Break +25 <br><br>
+
+                        6PC: <br>
+                        Damage Bonus (Damage Taken) A <br>
+                        <span class="font-bold text-red-600">Melee Damage (Cross Spear Equipped) +15.0%</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">The Rightful Eccentric</span><br><br>
+                        <span class="italic">Eccentric Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Easy Target A+ <br><br>
+
+                        3PC: <br>
+                        Life +150 <br><br>
+
+                        4PC: <br>
+                        Strong Attack Damage +6.0% <br><br>
+
+                        5PC: <br>
+                        Luck +20 <br><br>
+
+                        6PC: <br>
+                        Strong Attack Damage +8.0% <br>
+                        <span class="font-bold text-red-600">Versatility</span><br><br>
+
+                        7PC: <br>
+                        -
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Valiant Wonderer (DLC 1)</span><br><br>
+                        <span class="italic">Great Hachiryo's Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Piercing Projectiles <br><br>
+
+                        3PC: <br>
+                        Bow Damage +20.0% <br><br>
+
+                        4PC: <br>
+                        Increased Attack & Defense (Tonfa) +40 <br><br>
+
+                        5PC: <br>
+                        Melee Damage +6.0% <br><br>
+
+                        6PC: <br>
+                        Damage Taken -4.5% <br><br>
+
+                        7PC: <br>
+                        Attack Bonus (Courage) A <br>
+                        <span class="font-bold text-red-600">Ultimate Courage</span>
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Warrior of the West's Honor</span><br><br>
+                        <span class="italic">Warrior of the West Armor</span>
+                    </td>
+                    <td>
+                        2PC: <br>
+                        Life +100 <br><br>
+
+                        3PC: <br>
+                        <br><br>
+
+                        4PC: <br>
+                        <br><br>
+
+                        5PC: <br>
+                        <br><br>
+
+                        6PC: <br>
+                        <br><br>
+
+                        7PC: <br>
+                        
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
