Added more content to graces.html. Added the respective section header images in graces.html.

--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -282,6 +282,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Light Armor Sets</h2>
+            <img src="./img/sword_logo_1.png" alt="" class="mask rounded-lg">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -949,6 +950,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Medium Armor Sets</h2>
+            <img src="./img/sword_logo_2.png" alt="" class="mask rounded-lg">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -1586,6 +1588,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Heavy Armor Sets</h2>
+            <img src="./img/sword_logo_3.png" alt="" class="mask rounded-lg">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2158,6 +2161,80 @@
                         -
                     </td>
                 </tr>
+            </table>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Dream of the Demon Sets
+    ========== ========== ========== ========== ========== -->
+    <section id="demon" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Dream of the Demon Sets</h2>
+            <img src="./img/dotdemon_logo.png" alt="" class="mask rounded-lg">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Set Name</th>
+                    <th>Description</th>
+                </tr>
+
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Benzaiten's Grace</span><br><br>
+                    </td>
+                    <td>
+                        2 PC: <br>
+                        Life +252 <br><br>
+
+                        3 PC: <br>
+                        Ninjutsu Power +30 <br><br>
+
+                        4 PC: <br>
+                        Damage Taken -4.0% <br><br>
+
+                        5 PC: <br>
+                        Amrita Earned +10.0% <br><br>
+
+                        6 PC: <br>
+                        Versatility <br><br>
+
+                        7 PC: <br>
+                        Ki Recovery Speed +15.0%
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="font-bold">Bishamonten's Grace</span><br><br>
+                    </td>
+                    <td>
+                        2 PC: <br>
+                        Life +252 <br><br>
+
+                        3 PC: <br>
+                        Gold Earned +8.0% <br><br>
+
+                        4 PC: <br>
+                        Damage Taken -4.0% <br><br>
+
+                        5 PC: <br>
+                        Active Skill Damage +6.0% <br><br>
+
+                        6 PC: <br>
+                        Increased Attack (Timely Guard) <br><br>
+
+                        7 PC: <br>
+                        Attack Bonus (Strength) B
+                    </td>
+                </tr>
+                
             </table>
         </div>
     </section>
