Updated the href link for the Graces & Sets button in equipment_index.html.

--- a/nioh2/equipment/equipment_index.html
+++ b/nioh2/equipment/equipment_index.html
@@ -340,7 +340,7 @@
                 Graces & Sets (Button 9)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/graces/graces.html">
                     
                     <img class="mask rounded-lg" src="./img/graces_logo.png" alt="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
