--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -3048,92 +3048,93 @@
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">&#x2022; Blood of the Yokai:</span> Grants you the Blood of the Yokai status 
                 enhancement each time you hit an enemy with a Yokai Ability. This effect can stack up to 5 times. The higher this
-                number gets, the faster you earn Anima. Spending Anima will give you Amrita in proportion to the amount of Anima 
-                spent.
+                number gets, the faster you earn Anima (+10% per stack). Spending Anima will give you Amrita in proportion to the
+                amount of Anima spent.
             </p>
 
             <!-- Cleansing Prayer -->
 			<p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-				<span class="font-bold text-red-600">&#x2022; Cleansing Prayer:</span> Grants you the Blessing of the Trinity status 
-                enhancement each time you perform a purification. This effect can stack up to 3 times. At 1 stack you will 
-                automatically regenerate health. At 2 stacks, your Ki recovery speed will also increase. At 3 stacks, you will 
-                also deal increased melee damage.
+				<span class="font-bold text-red-600">&#x2022; Cleansing Prayer:</span> Grants you the Blessing of the Trinity 
+                status enhancement each time you perform a purification. This effect can stack up to 3 times. At 1 stack you will
+                automatically regenerate health. At 2 stacks, your Ki recovery speed will also increase (30%). At 3 stacks, you 
+                will also deal increased melee damage (30%).
 			</p>
 
             <!-- Darting Blade -->
 			<p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-				<span class="font-bold text-red-600">&#x2022; Darting Blade:</span> Using Flash Attack when you have two different weapon
-                types equipped increases the damage dealt by Flash Attack and grants you the Darting Blade status enhancement. 
-                This status reduces your Ki consumption when performing melee attacks and speeds up your Ki recovery. This 
-                special effect is not triggered if you are already under the effects of Darting Blade.
+				<span class="font-bold text-red-600">&#x2022; Darting Blade:</span> Using Flash Attack when you have two 
+                different weapon types equipped increases the damage dealt by Flash Attack and grants you the Darting Blade 
+                status enhancement. This status reduces your Ki consumption (20%) when performing melee attacks and speeds up 
+                your Ki recovery (15%). This special effect is not triggered if you are already under the effects of Darting 
+                Blade.
 			</p>
 
             <!-- Death Dancer -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; Death Dancer:</span> Grants you the Death Dancer status enhancement when 
-                you perform a melee attack if you have nottaken damage for a certain amount of time. Fulfilling the effect's 
+                <span class="font-bold text-red-600">&#x2022; Death Dancer:</span> Grants you the Death Dancer status enhancement
+                when you perform a melee attack if you have nottaken damage for a certain amount of time. Fulfilling the effect's
                 requirments again increases its stack by 1 (up to a max of 9). The higher this number gets, the higher your melee
-                attack power will be. Being hit by an enemy will cause you to lose 2 stacks, but if you block the attack the 
-                stack will only be reduced by 1.
+                attack power will be (+70% at max stacks). Being hit by an enemy will cause you to lose 2 stacks, but if you block
+                the attack the stack will only be reduced by 1.
             </p>
 
             <!-- Elemental Transmission -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; Elemental Transmission:</span> When switching from a weapon imbued with an
-                element to another, the weapon you are switching to will inherit the element of your previous weapon. This also 
-                extends the duration of your weapon's elemental imbuement.
+                <span class="font-bold text-red-600">&#x2022; Elemental Transmission:</span> When switching from a weapon imbued
+                with an element to another, the weapon you are switching to will inherit the element of your previous weapon. 
+                This also extends the duration of your weapon's elemental imbuement.
             </p>
 
             <!-- Finishing Flair -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; Finishing Flair:</span> Increases damage dealt in proportion to the scale
-                of your Ki damage when performing a melee attack against a Winded Enemy, Grapple, or Final Blow.
+                <span class="font-bold text-red-600">&#x2022; Finishing Flair:</span> Increases damage dealt in proportion to 
+                the scale of your Ki damage when performing a melee attack against a Winded Enemy, Grapple, or Final Blow.
             </p>
 
             <!-- Living Dead -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; Living Dead:</span> Receiving fatal damage will leave you with one health 
-                point and briefly grant you a period invincibility. You will also be afflicted with the Call of the Dead status 
-                ailment, which cannot be removed. While this ailment is active, you can heal yourself by dealing melee damage to
-                enemies, but this is your only allowed source of healing. The Call of the Dead will disappear if you fully heal 
-                yourself or defeat your enemies. Failing to remove this ailment will result in death. This effect can only be 
-                activated once, but can be activated again after praying at a Shrine.
+                <span class="font-bold text-red-600">&#x2022; Living Dead:</span> Receiving fatal damage will leave you with one
+                health point and briefly grant you a period invincibility. You will also be afflicted with the Call of the Dead
+                status ailment, which cannot be removed. While this ailment is active, you can heal yourself by dealing melee
+                damage to enemies, but this is your only allowed source of healing. The Call of the Dead will disappear if you
+                fully heal yourself or defeat your enemies. Failing to remove this ailment will result in death. This effect can
+                only be activated once, but can be activated again after praying at a Shrine.
             </p>
 
             <!-- Mystic Dyad -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; Mystic Dyad:</span> Allows you to have two Mystic Arts active for the 
-                specified weapon. This has no effect if you do not have any Mystic Arts activated.
+                <span class="font-bold text-red-600">&#x2022; Mystic Dyad:</span> Allows you to have two Mystic Arts active for
+                the specified weapon. This has no effect if you do not have any Mystic Arts activated.
             </p>
 
             <!-- Rock Solid -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; Rock Solid:</span> Grants you the Rock Solid status enhancement when you 
-                perform a melee attack within a certain time frame after guarding. Fulfilling the effect's requirments again 
-                increases its stack by 1 (up to a max of 9). As this number goes up, your melee attack power will increase while
-                your Ki consumption and elemental damage received while guarding decreases, Being hit by an enemy without 
-                guarding will cause you to lose 1 stack.
+                <span class="font-bold text-red-600">&#x2022; Rock Solid:</span> Grants you the Rock Solid status enhancement
+                when you perform a melee attack within a certain time frame after guarding. Fulfilling the effect's requirments
+                again increases its stack by 1 (up to a max of 9). As this number goes up, your melee attack power will increase
+                (+55% at max stacks) while your Ki consumption and elemental damage received while guarding decreases, Being hit
+                by an enemy without guarding will cause you to lose 1 stack.
             </p>
 
             <!-- Singular Mastery -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; Singular Mastery:</span> Increases damage dealt with a specific Active Skill
-                in a specific stance when it is the only Active Skill set to that stance.
+                <span class="font-bold text-red-600">&#x2022; Singular Mastery:</span> Increases damage dealt with a specific
+                Active Skill in a specific stance when it is the only Active Skill set to that stance.
             </p>
 
             <!-- True Dragon Sword -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; True Dragon Sword:</span> Speeds up Ki recovery and increases your Attack 
-                when you are using the Dragon Sword or Falcon Claws.
+                <span class="font-bold text-red-600">&#x2022; True Dragon Sword:</span> Speeds up Ki recovery (25%), and
+                increases your Attack (25%) when you are using the Dragon Sword or Falcon Claws.
             </p>
 
             <!-- Versatility -->
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">&#x2022; Versatility:</span> Grants you the Versatility status enhancement when you
-                hit an enemy with an Active Skill. The stack will increase by 1 every time you land a strike, up to a max of 9. 
-                The higher this number gets, the higher your melee attack power will be. Each Active Skill must be unique to 
-                count towards this effect. An advanced version of a skill (denoted by "II", etc.) is considered the same as its 
-                base version for this purpose.
+                <span class="font-bold text-red-600">&#x2022; Versatility:</span> Grants you the Versatility status enhancement
+                when you hit an enemy with an Active Skill. The stack will increase by 1 every time you land a strike, up to a
+                max of 9. The higher this number gets, the higher your melee attack power will be (+60% at max stacks). Each
+                Active Skill must be unique to count towards this effect. An advanced version of a skill (denoted by "II", etc.)
+                is considered the same as its base version for this purpose.
             </p>
         </div>
     </section>    
@@ -3148,7 +3149,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
             
             <div class="flex flex-col gap-2 text-slate-300 text-xl">
-                <span>LiuKang1080, Oninomiru</span>
+                <span>LiuKang1080, Oninomiru, SacredForce, Oolong Tea, Ocean Machine</span>
                 
                 <span class="bold-text">
                     <a class="text-sky-400 hover:text-sky-600" href="https://docs.google.com/spreadsheets/d/1A-uFgSck8pU5NOLh2OVpK_V5-AVfDW42wuiumuf7tlE/edit#gid=137724816"
