Updated text color, and fixed spelling errors in depths.html. Added more content to DOTSamurai_enemies and DOTSamurai_missions .html files.

--- a/nioh2/world/underworld/depths/depths.html
+++ b/nioh2/world/underworld/depths/depths.html
@@ -256,13 +256,13 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-700">Unlocking the Depths of the Underworld: </span> The player must complete 
+                <span class="font-bold text-red-600">Unlocking the Depths of the Underworld: </span> The player must complete 
                 all 108 Floors of the Underworld in order to unlock the Depths of the Underworld. The Depths of the Underworld 
                 contains the most difficult enemies and bosses.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-700">Structure of the Depths of the Underworld: </span> The Depths is very 
+                <span class="font-bold text-red-600">Structure of the Depths of the Underworld: </span> The Depths is very 
                 similar to the previous 108 Floors of the Underworld, containing an extra 30 Floors. All 30 Floors of the Depths 
                 are randomized, and change daily at the same time when Twilight Missions change. Upon entering the Depths you 
                 will spawn in Terra Firma. Here you can rest at the shrine, talk to 
@@ -274,20 +274,20 @@
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-700">Special mechanics of the Depths of the Underworld: </span> Progression and
+                <span class="font-bold text-red-600">Special mechanics of the Depths of the Underworld: </span> Progression and
                 saving progress in the Depths works differently compared to the previous 108 Floors. The player must complete at
                 least 5 Floors of the Depths in order for progress to be saved. Since progress is saved every 5 Floors, leaving
                 the Depths before reaching the next Floor that is divisible by 5 will reset the progress and spawn the player
                 back to the previous Floor divisible by 5 when returning to the Depths. EX) A player plays from Depths Floor 1 to
-                Floor 8, progress is saved on Floor 5. If the players quits the Depths on Floor 8, the next time they spwan into
+                Floor 8, progress is saved on Floor 5. If the players quits the Depths on Floor 8, the next time they spawn into
                 the Depths they will start at Floor 5, NOT at Floor 8! The player must reach Depths Floor 10 for the next
-                progression save. You can always use the items: <a class="bold-text" href="">Divine Branch</a>, and
-                <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch Fragment</a> to leave the Depths of the 
+                progression save. You can always use the items: <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch</a>,
+                and <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch Fragment</a> to leave the Depths of the 
                 Underworld at any time.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-700">Multiple Bosses: </span> For all 108 Floors of the Underworld the player has
+                <span class="font-bold text-red-600">Multiple Bosses: </span> For all 108 Floors of the Underworld the player has
                 to defeat only 1 boss on each Floor. The Depths of the Underworld is slightly different with the number of bosses
                 the player faces on each Floor. The pool of bosses from the Underworld is the same for the Depths.
                 <br>
