--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -427,7 +427,7 @@
             top row 
             ========== -->
             <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-red hover:bg-light-red"
-                href="">
+                href="https://liukang1080.github.io/gamewiki/nioh2/tools/tools_index.html">
                 
                 <img src="./img/tools_icon.png" alt="">
                 <span class="  text-2xl text-slate-300">Tools & Resources</span>
