Updated tools_index.html. Added smithing_texts_index.html.

--- a/nioh2/tools/smithing_texts/smithing_texts_index.html
+++ b/nioh2/tools/smithing_texts/smithing_texts_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nioh 2 Tools & Resources</title>
+    <title>Nioh 2 Smithing Texts</title>
     <!-- ========== ========== ==========
     Google Fonts (Asul)
     ========== ========== ========== -->
@@ -20,13 +20,13 @@
     TailWindCSS Link
     ========== ========== ========== -->
     <!-- <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/output.css" rel="stylesheet"> -->
-    <link type="text/css" href="../../css/output.css" rel="stylesheet">
+    <link type="text/css" href="../../../css/output.css" rel="stylesheet">
 
     <!-- ========== ========== ==========
     Manual CSS Link
     ========== ========== ========== -->
     <!-- <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/manual.css" rel="stylesheet"> -->
-    <link type="text/css" href="../../css/manual.css" rel="stylesheet">
+    <link type="text/css" href="../../../css/manual.css" rel="stylesheet">
 
     <!-- ========== ========== ==========
     TailWind CSS build process:
@@ -230,7 +230,7 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-5xl md:text-6xl">Tools & Resources</h1>
+            <h1 class="text-yellow-400 text-5xl md:text-6xl">Smithing Texts</h1>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
@@ -248,71 +248,52 @@
                 2xl:grid 2xl:grid-cols-3">
 
                 <!-- ==========
-                Smithing Texts (Button 1)
-                ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/smithing_texts_index.html">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Smithing Texts</span>
-                </a>
-
-                <!-- ==========
-                Temper Tables (Button 2)
+                Hidden Skills (Button 1)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Temper Tables</span>
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Hidden Skills</span>
                 </a>
 
                 <!-- ==========
-                Blacksmith (Button 3)
+                Weapon Smithing Texts (Button 1)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Blacksmith</span>
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Weapon Smithing Texts</span>
                 </a>
 
                 <!-- ==========
-                Stone of Penance (Button 4)
+                Armor Smithing Texts (Button 1)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Stone of Penance</span>
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Armor Smithing Texts</span>
                 </a>
 
                 <!-- ==========
-                Farming Resources (Button 5)
+                Misc Smithing Texts (Button 1)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Farming Resources</span>
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Misc Smithing Texts</span>
                 </a>
 
                 <!-- ==========
-                Achievements (Button 6)
+                Mission Progression Unlocks (Button 1)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Achievements</span>
-                </a>
-
-                <!-- ==========
-                Builds (Button 7)
-                ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Builds</span>
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Mission Progression Unlocks</span>
                 </a>
             </div>
         </div>
     </section>
-
 
     <!-- ========== ========== ========== ========== ==========
     JavaScript
