Updated the href link for smiting_text_index.html in nioh2.html.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -438,7 +438,7 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-yellow-400" href="">Smithing Texts</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/smithing_texts_index.html">Smithing Texts</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-yellow-400" href="">Temper Tables</a>
